# tcpgecko

./: CMakeLists.txt  CMakeLists.txt.backup  README.md  WUPS.cmake  log.txt
src/: entry.c  link.ld
src/common/: common.h  kernel_defs.h  loader_defs.h  os_defs.h  retain_vars.c  retain_vars.h  types.h
src/fs/: CFile.cpp  CFile.hpp  DirList.cpp  DirList.h  fs_utils.c  fs_utils.h  sd_fat_devoptab.c  sd_fat_devoptab.h
src/game/: memory_area_table.c  memory_area_table.h  rpx_rpl_table.c  rpx_rpl_table.h
src/kernel/: kernel_functions.c  kernel_functions.h  syscalls.c  syscalls.h
src/patcher/: fs_logger.c  fs_logger.h  function_patcher_coreinit.c  function_patcher_coreinit.h  function_patcher_gx2.c  function_patcher_gx2.h
src/system/: exception_handler.cpp  exception_handler.h
src/tcpgecko/: address.cpp  address.h  assertions.h  code_handler.h  disassembler.cpp  disassembler.h  hardware_breakpoints.h  kernel.h  linked_list.cpp  linked_list.h  main.cpp  main.h  net.cpp  net.h  pause.h  raw_assembly_cheats.h  sd_cheats.cpp  sd_cheats.h  sd_ip_reader.cpp  sd_ip_reader.h  software_breakpoints.h  stack.h  stringify.h  tcp_gecko.cpp  tcp_gecko.h  texture.h  threads.cpp  threads.h  title.cpp  title.h  utilities.h
src/utils/: StringTools.cpp  StringTools.h  function_patcher.cpp  function_patcher.h  logger.c  logger.h  ppc_asm.h  utils.h
